<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="launch_logo_description">Logo of Election</string>
    <string name="launch_upcoming_elections">Upcoming Elections</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="launch_representatives_button">Button of Representatives</string>
    <string name="representatives_button">Representatives</string>
    <string name="representative_fb">%s facebook page</string>
    <string name="representative_twitter">%s twitted</string>
    <string name="representative_www">%s web page</string>
    <string name="representative_no">%s from %s</string>
    <string name="election_information">Election Information</string>

    <string name="follow">Follow Election</string>
    <string name="unfollow">Unfollow Election</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="use_my_location">Use my location</string>
    <string name="find_my_representatives">Find my Representatives</string>
    <string name="city">City</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="zip_code">Zip code</string>
    <string name="representative_search">Representative Search</string>
    <string name="state_location">State location</string>
    <string name="state_ballot">State ballot</string>
    <string name="state_correspondence">State correspondence</string>
    <string name="address">Address</string>
    <string name="voting_location">Voting location</string>
    <string name="profile_image">Profile image</string>
    <string name="notify_location_required">Need GPS on</string>


</resources>
