<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".launch.LaunchFragment">

        <ImageView
            android:id="@+id/launchLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/launch_logo_description"
            android:src="@drawable/ballot_logo"
            app:layout_constraintBottom_toTopOf="@+id/upcomingButton"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.6" />

        <Button
            android:id="@+id/upcomingButton"
            style="@style/ButtonNormalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/launch_upcoming_elections"
            android:text="@string/upcoming_elections"
            app:layout_constraintBottom_toTopOf="@+id/representativeButton" />

        <Button
            android:id="@+id/representativeButton"
            style="@style/ButtonNormalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:contentDescription="@string/launch_representatives_button"
            android:text="@string/representatives_button"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>