<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".election.VoteInfoFragment">

        <TextView
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:text="@{viewModel.election.name}"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimen_32sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Election Name" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:layout_marginHorizontal="@dimen/dimen_20dp"
            android:text="@{viewModel.election.electionDay.toString()}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/election_information"
            android:textSize="@dimen/dimen_24sp"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_location"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            tools:text="@string/state_location" />

        <!--android:text="@{viewModel.electionInfo.electionAdministrationBody.electionInfoUrl}"-->
        <TextView
            android:id="@+id/state_ballot"
            bindLinkToView="@{viewModel.electionInfo.electionAdministrationBody.ballotInfoUrl}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            tools:text="@string/state_ballot" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!--android:text="@{viewModel.electionInfo.electionAdministrationBody.votingLocationFinderUrl}"-->
        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_correspondence"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            tools:text="@string/state_correspondence" />

        <TextView
            android:id="@+id/address"
            bindLinkToView="@{viewModel.electionInfo.electionAdministrationBody.electionInfoUrl}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="@string/address" />

        <!--android:text="@{viewModel.electionInfo.electionAdministrationBody.votingLocationFinderUrl}"-->
        <TextView
            android:id="@+id/voting_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voting_location"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/address"
            tools:text="@string/voting_location" />

        <TextView
            android:id="@+id/voting_location_url"
            bindLinkToView="@{viewModel.electionInfo.electionAdministrationBody.votingLocationFinderUrl}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/voting_location"
            tools:text="address" />

        <ProgressBar
            android:id="@+id/loadingViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnSaveElection"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:background="@color/colorPrimary"
            android:onClick="@{() -> viewModel.saveElection(viewModel.election)}"
            android:text="@{(!viewModel.election.saved) ? @string/follow : @string/unfollow}"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/follow" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>